# aio-mcserver

./: .gitignore  main.py  pyproject.toml  requirements.txt
aio_mcserver/: cli.py  config.py  server.py  setup.py
aio_mcserver/downloader/: base.py  download_info.py  floodgate.py  geysermc.py  geysermc_base.py  github_base.py  hangar_base.py  mcxboxbroadcast.py  paper.py  papermc_base.py  viabackwards.py  viaversion.py
scripts/: build.bat  build.sh
